--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
       PfxBase64: ${{ secrets.BASE64_ENCODED_PFX }}
       PfxKey: ${{ secrets.PFX_KEY }}
       ServerUrl: ${{ github.event.inputs.serverUrl }}
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
     steps:
     - name: Checkout
